--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -186,3 +186,29 @@ footer nav ul {
 	margin: 2em
 }
 
+/* Mes Ajouts */
+
+.btns-portfolio {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 10px;
+	padding-bottom: 50px;
+}
+
+.btns-portfolio button {
+	border: 1px solid #1D6154;
+	font-family: 'Syne';
+	font-size: 16px;
+	font-weight: 700;
+	color: #1D6154;
+	background-color: white;
+	border-radius: 20px;
+	padding: 6px 20px;
+}
+
+.btns-portfolio button:hover {
+	border: 2px solid #ffff;
+	color: #ffff;
+	background-color: #1D6154;
+}
