--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -189,15 +189,6 @@ footer nav ul {
 
 /* Mes Ajouts */
 
-/* Fond */
-
-footer {
-	position: relative;
-	bottom: 0;
-	height: 60px;
-	background-color: blue;
-}
-
 /* Boutons  */
 .btns-portfolio {
 	display: flex;
@@ -226,24 +217,48 @@ footer {
 
 /* Login */
 
-.form-login {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	padding: 50px;
-}
-
-#loginForm {
-	padding: 50px;
-	display: flex;
-	flex-direction: column;
-	max-width: 450px;
-	border: 2px solid blue;
-}
 
 .mdp-oublie {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	font-family: 'Work Sans' ;
+	font-size: 14px;
+	color: #000000;
+}
+
+#loginSection {
+	width: 50%;
+	margin: auto;
+}
+
+#loginSection > * {
+	text-align: center;
+
+}
+#loginSection h2{
+	margin-bottom: 20px;
+}
+#loginSection form {
+	text-align: left;
+	margin-top:30px;
+	display: flex;
+	flex-direction: column;
+}
+
+#loginSection input {
+	height: 50px;
+	font-size: 1.2em;
+	border: none;
+	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+}
+
+#loginSection label {
+	margin: 2em 0 1em 0;
+}
+
+.erreurLogin {
+	padding: 50px;
+	font-weight: bolder ;
+	text-align: center;
 }
