--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -262,3 +262,17 @@ footer nav ul {
 	font-weight: bolder ;
 	text-align: center;
 }
+
+.differente{
+	font-size: 14px;
+}
+
+.banner {
+	height: 60px;
+	background-color: #000000;
+	color: #FFFEF8;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+}
