--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -274,5 +274,24 @@ footer nav ul {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+}
 
+.modal{
+    /* display: none; */
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content{
+    background-color: #f4f4f4;
+    margin: 20% auto;
+    padding: 20px;
+    width: 70%;
+    box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.17);
 }
