add CSS modale add picture - Test

--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -274,6 +274,11 @@ footer nav ul {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	font-family: 'Work Sans'; 
+}
+
+.banner i {
+	padding: 5px;
 }
 
 /* Modal */
@@ -339,7 +344,9 @@ footer nav ul {
 }
 
 .titreGallery {
+	font-family: "Work Sans", sans-serif;
 	font-size: 26px;
+	font-weight: 400;
 	text-align: center;
 	padding: 10px 0 46px 0;
 }
