--- a/FrontEnd/test.css
+++ b/FrontEnd/test.css
@@ -12,44 +12,25 @@
 
 .modal-content{
 	border: 3px solid red;
-    background-color: #f4f4f4;
+    background-color: #FFFFFF;
     margin: 20% auto;
     width: 70%;
     box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.17);
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	padding: 10px 0 45px 0;
+	padding: 10px 0 0 0;
 	border-radius: 10px;
 
 }
 
-.galleryModal {
-    border: 2px solid purple;
-    display: flex;
-    flex-wrap: wrap;
-	padding: 0px 105px;
-}
-
-.galleryModal div {
-    flex: 0 1 20%;
-    box-sizing: border-box;
-    padding: 5px;
-}
-
-.galleryModal img {
-    width: 100%;
-    height: auto;
-}
-
 .closeBtn {
-	/* border: 2px solid green; */
     color: #000000;
     font-size: 30px;
-	width: 100%;
+	/* width: 100%; */
 	box-sizing: border-box;
 	text-align: end;
-	padding: 0 30px;
+
 }
 
 .closeBtn:hover, .closeBtn:focus {
@@ -57,45 +38,131 @@
 	cursor: pointer;
 }
 
-.titreGallery {
+.returnBtn:hover, .returnBtn:focus {
+    cursor: pointer;
+}
+
+.titreModal {
+    font-family: "Work Sans", sans-serif;
 	font-size: 26px;
+    font-weight: 400;
+    line-height: 30.5px;
 	text-align: center;
-	padding: 10px 0 46px 0;
+    margin: 0;
+    padding-bottom: 36px;
 }
 
-.btnAddImg {
-	width: 25%;
-	text-align: center;
-	border: 1px solid #1D6154;
-	font-family: 'Syne';
-	font-size: 16px;
-	font-weight: 700;
-	color: #f4f4f4; 
-	background-color: #1D6154;
-	border-radius: 20px;
-	padding: 6px 20px;
+.returnClose {
+    border: 2px solid blue;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 16px 0 0 0;
 }
 
-.btnAddImg:hover {
-	cursor: pointer;
+.returnClose span {
+    font-size: 30px;
+    font-weight: bold;
+    padding: 0 30px 0 30px;
 }
 
-hr {
-	border-top: 1px solid #B3B3B3;
-	width: 70%;
+.AddImgModal {
+    width: 420px;
+    background-color: #E8F1F6;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-items: center;
+    align-content: center;
+    padding: 13px 0 19px 0;
+    box-sizing: border-box;
+    gap: 7px;
+
 }
 
-.containerBin {
-    position: relative;
-    display: inline-block;
+.imgIcon {
+    color: #A7A7A7;
+    font-size: 4em;
 }
 
-.iconPoubelle {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    color: white;
-    background-color: black;
-    border-radius: 5px;
+.addPhoto {
+    height: 36px;
+    text-decoration: none;
+    background-color: #CBD6DC;
+    color: #306685;
+    border: none;
     text-align: center;
+    border-radius: 50px;
+    padding: 0px 30px 0px 30px;
+    font-family: 'Work Sans', sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 17px;
+    cursor: pointer;
 }
+
+
+
+
+.infoPhoto {
+    padding: 0;
+    font-size: 10px;
+    font-family: 'Work Sans', sans-serif;
+    font-weight: 400;
+}
+
+.hrAddPhoto {
+    width: 100%;
+    margin-top: 47px;
+    margin-bottom: 0;
+    
+}
+
+.formAjoutPhoto{
+    width: 420px;
+    box-sizing: border-box;
+}
+
+.formAjoutPhoto form {
+	text-align: left;
+	display: flex;
+	flex-direction: column;
+}
+
+.formAjoutPhoto input {
+	height: 50px;
+	font-size: 1.2em;
+	border: none;
+	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+}
+
+.formAjoutPhoto label {
+	margin: 2em 0 1em 0;
+    font-size: 14px;
+    font-weight: 500;
+    font-family: 'Work Sans', sans-serif;
+}
+
+.formAjoutPhoto select {
+    border-right: 16px solid transparent;
+	height: 50px;
+	font-size: 1.2em;
+	border: none;
+	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+    padding-right: 20px;
+}
+
+.formAjoutPhoto input[type="submit"]{
+    height: 36px;
+    width: 237px;
+	font-family: 'Work Sans', sans-serif;
+    font-size: 14px;
+	color: white;
+	background: #A7A7A7;
+	margin : 32px auto ;
+	width: 180px;
+	text-align: center;
+	border-radius: 60px ;
+    cursor: pointer;
+}
+
