--- a/FrontEnd/test.css
+++ b/FrontEnd/test.css
@@ -1,300 +1,190 @@
 * {
-    font-family: 'Work Sans', sans-serif;
+  font-family: "Work Sans", sans-serif;
 }
 
-.modal{
-	border: 5px solid blue;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    height: 100%;
-    width: 100%;
-    overflow: auto;
-    background-color: rgba(0, 0, 0, 0.5);
+.modal {
+  border: 5px solid blue;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
-.modal-content{
-	border: 3px solid red;
-    background-color: #FFFFFF;
-    margin: 20% auto;
-    width: 70%;
-    box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.17);
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	padding: 10px 0 55px 0;
-	border-radius: 10px;
+.modal-content {
+  border: 3px solid red;
+  background-color: #ffffff;
+  margin: 20% auto;
+  width: 70%;
+  box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.17);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px 0 55px 0;
+  border-radius: 10px;
 }
 
 .modalHeader {
-    border: 2px solid blue;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 30px 0 30px;
-    box-sizing: border-box;
+  border: 2px solid blue;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 30px 0 30px;
+  box-sizing: border-box;
 }
 
 .returnBtn i {
-    border: 2px solid pink;
-    width: 21px;
-    height: 21px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  border: 2px solid pink;
+  width: 21px;
+  height: 21px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .closeBtn i {
-    border: 2px solid pink;
-    width: 24px;
-    height: 24px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  border: 2px solid pink;
+  width: 24px;
+  height: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.closeBtn:hover, .closeBtn:focus {
-	text-decoration: none;
-	cursor: pointer;
+.closeBtn:hover,
+.closeBtn:focus {
+  text-decoration: none;
+  cursor: pointer;
 }
 
-.returnBtn:hover, .returnBtn:focus {
-    cursor: pointer;
+.returnBtn:hover,
+.returnBtn:focus {
+  cursor: pointer;
 }
 
 .modalTitle {
-    font-weight: 400;
-    font-size: 26px;
-    line-height: 30.5px;
+  font-weight: 400;
+  font-size: 26px;
+  line-height: 30.5px;
 }
 
 .imgUploadForm form {
-    outline: 2px solid grey;
-    width: 420px;
-    display: flex;
-    flex-direction: column;
+  outline: 2px solid grey;
+  width: 420px;
+  display: flex;
+  flex-direction: column;
 }
 
 .uploadPhotoForm {
-    border: 2px solid purple;
-    box-sizing: border-box;
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #E8F1F6;
-    border-radius: 3px;
-    padding: 13px 0 19px 0;
+  border: 2px solid purple;
+  box-sizing: border-box;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #e8f1f6;
+  border-radius: 3px;
+  padding: 13px 0 19px 0;
 }
 
 .fileUploadLabel {
-    width: 76px;
-    height: 76px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 76px;
+  height: 76px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .uploadImgIcon {
-    color: #CBD6DC;
+  color: #cbd6dc;
 }
 
 .fileUploadBtn {
-    margin: 6px 0 7px 0;
-    height: 36px;
-    text-decoration: none;
-    background-color: #CBD6DC;
-    color: #306685;
-    border: none;
-    text-align: center;
-    border-radius: 50px;
-    padding: 0px 30px 0px 30px;
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 16.42px;
-    cursor: pointer;
+  margin: 6px 0 7px 0;
+  height: 36px;
+  text-decoration: none;
+  background-color: #cbd6dc;
+  color: #306685;
+  border: none;
+  text-align: center;
+  border-radius: 50px;
+  padding: 0px 30px 0px 30px;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 16.42px;
+  cursor: pointer;
 }
 
-
 #fileUpload {
-    display: none;
+  display: none;
 }
 
 .previewDisplay {
-    display: none;
+  display: none;
 }
 
 .infoPhoto {
-    font-size: 10px;
-    font-weight: 400;
-    line-height: 11.73px;
-    color: #444444;
+  font-size: 10px;
+  font-weight: 400;
+  line-height: 11.73px;
+  color: #444444;
 }
 
 .inputFields {
-    border: 2px solid purple;
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    margin: 0;
-    padding: 0;
+  border: 2px solid purple;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
 }
-
 
 .inputFields label {
-	margin: 2em 0 1em 0;
-    font-size: 14px;
-    font-weight: 500;
-    font-family: 'Work Sans', sans-serif;
-    color: #3d3d3d;
+  padding: 21px 0 10px 0;
+  font-size: 14px;
+  font-weight: 500;
+  font-family: "Work Sans", sans-serif;
+  color: #3d3d3d;
 }
 
-.inputFields input, .inputFields select {
-	height: 50px;
-	font-size: 14px;
-	border: none;
-	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+.inputFields input,
+.inputFields select {
+  height: 50px;
+  font-size: 14px;
+  border: none;
+  box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+}
+
+.inputFields div {
+  padding-bottom: 39px;
 }
 
 #category {
-    border: 2px solid blue;
-    width: 100%;
-    color: red;
-    padding-right: 15px;
-}
-
-
-
-
- /* ------ */
-/*
-.titreModal {
-    font-family: "Work Sans", sans-serif;
-	font-size: 26px;
-    font-weight: 400;
-    line-height: 30.5px;
-	text-align: center;
-    margin: 0;
-    padding-bottom: 36px;
-}
-
-.returnClose {
-    border: 2px solid blue;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    padding: 16px 0 0 0;
-}
-
-.returnClose span {
-    font-size: 30px;
-    font-weight: bold;
-    padding: 0 30px 0 30px;
-}
-
-.AddImgModal {
-    width: 420px;
-    background-color: #E8F1F6;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    align-items: center;
-    align-content: center;
-    padding: 13px 0 19px 0;
-    box-sizing: border-box;
-    gap: 7px;
-
-}
-
-.imgIcon {
-    color: #A7A7A7;
-    font-size: 4em;
-}
-
-.addPhoto {
-    height: 36px;
-    text-decoration: none;
-    background-color: #CBD6DC;
-    color: #306685;
-    border: none;
-    text-align: center;
-    border-radius: 50px;
-    padding: 0px 30px 0px 30px;
-    font-family: 'Work Sans', sans-serif;
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 17px;
-    cursor: pointer;
-}
-
-
-
-
-.infoPhoto {
-    padding: 0;
-    font-size: 10px;
-    font-family: 'Work Sans', sans-serif;
-    font-weight: 400;
+  border: 2px solid blue;
+  width: 100%;
+  color: red;
+  padding-right: 15px;
 }
 
 .hrAddPhoto {
-    width: 100%;
-    margin-top: 47px;
-    margin-bottom: 0;
-    
+  width: 100%;
 }
 
-.formAjoutPhoto{
-    width: 420px;
-    box-sizing: border-box;
+.validerInput {
+  margin: 0 auto;
+  margin-bottom: ;
+  border: none;
+  height: 36px;
+  width: 237px;
+  font-size: 14px;
+  color: white;
+  background: #a7a7a7;
+  width: 180px;
+  text-align: center;
+  border-radius: 60px;
+  cursor: pointer;
 }
-
-.formAjoutPhoto form {
-	text-align: left;
-	display: flex;
-	flex-direction: column;
-}
-
-.formAjoutPhoto input {
-	height: 50px;
-	font-size: 1.2em;
-	border: none;
-	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
-}
-
-.formAjoutPhoto label {
-	margin: 2em 0 1em 0;
-    font-size: 14px;
-    font-weight: 500;
-    font-family: 'Work Sans', sans-serif;
-}
-
-.formAjoutPhoto select {
-    border-right: 16px solid transparent;
-	height: 50px;
-	font-size: 1.2em;
-	border: none;
-	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
-    padding-right: 20px;
-}
-
-.formAjoutPhoto input[type="submit"]{
-    height: 36px;
-    width: 237px;
-	font-family: 'Work Sans', sans-serif;
-    font-size: 14px;
-	color: white;
-	background: #A7A7A7;
-	margin : 32px auto ;
-	width: 180px;
-	text-align: center;
-	border-radius: 60px ;
-    cursor: pointer;
-}
-
-.previewDisplay {
-    display: none;
-} */
-
