Add work working + error messages added

--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -505,6 +505,11 @@ footer nav ul {
   #fileUpload {
 	display: none;
   }
+
+  #errorMissingFile {
+	color: red;
+	display: none;
+  }
   
   .infoPhoto {
 	font-size: 10px;
