--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -127,7 +127,8 @@ li:hover {
 	margin-bottom: 1em;
 }
 .gallery {
-	width: 100%;
+	margin: 2em;
+	/* width: 100%; */
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
 	grid-column-gap: 20px;
@@ -181,10 +182,26 @@ input[type="submit"]{
 	border-radius: 60px ;
 }
 
+footer {
+	background-color: blue;
+	width: 100%;
+	position: relative; 
+	left: 0;
+	bottom: 0;
+}
+
+.footerLogin {
+	background-color: blue;
+	width: 100%;
+	/* position: fixed; */
+	left: 0;
+	bottom: 0;
+}
+
 footer nav ul {
 	display: flex;
 	justify-content: flex-end;
-	margin: 2em
+	padding: 24px 0px 20px 0;
 }
 
 /* Mes Ajouts */
@@ -204,7 +221,7 @@ footer nav ul {
 	font-size: 16px;
 	font-weight: 700;
 	color: #1D6154;
-	background-color: white;
+	background-color: #FFFEF8;
 	border-radius: 20px;
 	padding: 6px 20px;
 }
@@ -257,7 +274,7 @@ footer nav ul {
 	margin: 2em 0 1em 0;
 }
 
-.erreurLogin {
+.errorLogin {
 	padding: 50px;
 	font-weight: bolder ;
 	text-align: center;
