--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -558,10 +558,11 @@ footer nav ul {
 }
 
 .hrAddPhoto {
+    margin-bottom: 30px;
 	width: 100%;
 }
 
-.validerInput {
+#submitNewWork {
 	font-family: 'Syne' sans-serif;
 	margin: 0 auto;
 	border: none;
@@ -569,27 +570,12 @@ footer nav ul {
 	width: 237px;
 	font-size: 14px;
 	color: #FFFFFF;
-	background: #a7a7a7;
-	width: 180px;
+	background: #A7A7A7;
 	text-align: center;
 	border-radius: 60px;
 	cursor: pointer;
 }
 
-.validerPreviewInput {
-	font-family: 'Syne' sans-serif;
-	margin: 0 auto;
-	border: none;
-	height: 36px;
-	width: 237px;
-	font-size: 14px;
-	color: #FFFFFF;
-	background: #1D6154;
-	width: 180px;
-	text-align: center;
-	border-radius: 60px;
-	cursor: pointer;
-}  
 
 .imgPreviewContainer {
 	width: 420px;
